# TTTT

./: .flake8  .gitignore  .gitmodules  AboutFilVal.md  CMakeLists.txt  Doxyfile.in  HistCollection.h  LICENSE  Makefile  MiniTree.cpp  MiniTree.h  MiniTree.hpp  MiniTreeDataSet.hpp  MiniTreeDoc.txt  README.md  TTTT_Analysis.cpp  TTTT_Analysis.ipynb  canvas_wrapper.py  log.hpp  plotter.py  utils.py
analysis/: MVA_Creation.cpp  MiniTree.h  MiniTree.hpp  MiniTreeDataSet.hpp  (+2 more)
docs/: .gitignore  AboutFilVal_8md_source.html  CMakeLists.txt  CNAME  Doxyfile  Doxyfile.in  LinkDef_8hpp_source.html  MVA__Creation_8cpp.html  MVA__Creation_8cpp__incl.map  MVA__Creation_8cpp__incl.md5  MVA__Creation_8cpp_source.html  MiniTreeDataSet_8hpp.html  MiniTreeDataSet_8hpp__dep__incl.map  MiniTreeDataSet_8hpp__dep__incl.md5  MiniTreeDataSet_8hpp__incl.map  MiniTreeDataSet_8hpp__incl.md5  MiniTreeDataSet_8hpp_source.html  MiniTree_8hpp.html  MiniTree_8hpp__dep__incl.map  MiniTree_8hpp__dep__incl.md5  MiniTree_8hpp__incl.map  MiniTree_8hpp__incl.md5  MiniTree_8hpp_source.html  Plotter Testing.html  README_8md_source.html  TTTT_Analysis-checkpoint.html  TTTT_Analysis.html  TTTT__Analysis_8cpp.html  TTTT__Analysis_8cpp__incl.map  TTTT__Analysis_8cpp__incl.md5  TTTT__Analysis_8cpp_source.html  annotated.html  api_8hpp.html  api_8hpp__dep__incl.map  api_8hpp__dep__incl.md5  api_8hpp__incl.map  api_8hpp__incl.md5  api_8hpp_source.html  argparse_8hpp.html  argparse_8hpp__dep__incl.map  (+549 more)
docs/html/: MiniTreeDataSet_8hpp_source.html  MiniTree_8hpp_source.html  annotated.html  argparse_8hpp.html  argparse_8hpp__dep__incl.md5  argparse_8hpp__incl.md5  classMiniTree-members.html  classMiniTree.html  classMiniTreeDataSet-members.html  classMiniTreeDataSet.html  classMiniTreeDataSet__coll__graph.md5  classMiniTreeDataSet__inherit__graph.map  classMiniTreeDataSet__inherit__graph.md5  classMiniTree__inherit__graph.map  classMiniTree__inherit__graph.md5  classes.html  classfilval_1_1BoundValue-members.html  classfilval_1_1BoundValue.html  classfilval_1_1BoundValue__coll__graph.map  classfilval_1_1BoundValue__coll__graph.md5  classfilval_1_1BoundValue__inherit__graph.map  classfilval_1_1BoundValue__inherit__graph.md5  classfilval_1_1ConstantValue-members.html  classfilval_1_1ConstantValue.html  classfilval_1_1ConstantValue__coll__graph.map  classfilval_1_1ConstantValue__coll__graph.md5  classfilval_1_1ConstantValue__inherit__graph.map  classfilval_1_1ConstantValue__inherit__graph.md5  classfilval_1_1Container-members.html  classfilval_1_1Container.html  classfilval_1_1ContainerVector-members.html  classfilval_1_1ContainerVector.html  classfilval_1_1ContainerVector__coll__graph.md5  classfilval_1_1ContainerVector__inherit__graph.map  classfilval_1_1ContainerVector__inherit__graph.md5  classfilval_1_1Container__coll__graph.map  classfilval_1_1Container__coll__graph.md5  classfilval_1_1Container__inherit__graph.map  classfilval_1_1Container__inherit__graph.md5  classfilval_1_1DataSet-members.html  (+410 more)
docs/html/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  namespaces_0.js  namespaces_1.js  pages_1.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/intro/: CMakeLists.txt  beamerthemebjeldbak.sty  intro.tex  live_figures
docs/intro/figures/feynman-diagrams/: generate_pngs
docs/intro/slides/: decay_channels.tex  decay_channels_rates.tex  introduction.tex  irreducible_backgrounds.tex  prelim_plots.tex  previous_measurements.tex  production.tex  progress_and_status.tex  reducible_backgrounds.tex  references.tex  strategy.tex  timeline.tex
docs/latex/: annotated.tex  argparse_8hpp.tex  argparse_8hpp__dep__incl.md5  argparse_8hpp__incl.md5  classMiniTree.tex  classMiniTreeDataSet.tex  classMiniTreeDataSet__coll__graph.md5  classMiniTreeDataSet__inherit__graph.md5  classMiniTree__inherit__graph.md5  classfilval_1_1BoundValue.tex  classfilval_1_1BoundValue__coll__graph.md5  classfilval_1_1BoundValue__inherit__graph.md5  classfilval_1_1ConstantValue.tex  classfilval_1_1ConstantValue__coll__graph.md5  classfilval_1_1ConstantValue__inherit__graph.md5  classfilval_1_1Container.tex  classfilval_1_1ContainerVector.tex  classfilval_1_1ContainerVector__coll__graph.md5  classfilval_1_1ContainerVector__inherit__graph.md5  classfilval_1_1Container__coll__graph.md5  classfilval_1_1Container__inherit__graph.md5  classfilval_1_1DataSet.tex  classfilval_1_1DataSet__inherit__graph.md5  classfilval_1_1DerivedValue.tex  classfilval_1_1DerivedValue__coll__graph.md5  classfilval_1_1DerivedValue__inherit__graph.md5  classfilval_1_1ElementOf.tex  classfilval_1_1ElementOf__coll__graph.md5  classfilval_1_1ElementOf__inherit__graph.md5  classfilval_1_1Filter.tex  classfilval_1_1Filter__coll__graph.md5  classfilval_1_1Filter__inherit__graph.md5  classfilval_1_1Filter_ac91ccc66b66c8ea8cdad27fd9b4b62e2_cgraph.md5  classfilval_1_1GenContainer.tex  classfilval_1_1GenContainer__inherit__graph.md5  classfilval_1_1GenValue.tex  classfilval_1_1GenValue__inherit__graph.md5  classfilval_1_1Max.tex  classfilval_1_1MaxIndex.tex  classfilval_1_1MaxIndex__coll__graph.md5  (+265 more)
docs/presentations/intro/: CMakeLists.txt  intro.tex  main.tex
docs/presentations/intro/figures/feynman-diagrams/: T->(b->jet),W.xml  T-b_W-ln.xml  T-b_W-qq.xml  T-b_W.xml
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  files_0.js  files_2.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+9 more)
(+40 files in other folders)
